plugins {
    id 'com.android.library'
    id 'maven-publish'
}

android {
    namespace 'com.partharoypc.adglide'
    compileSdk 36
    defaultConfig {
        minSdk 23
        targetSdk 36
        versionCode 10
        versionName "2.0.0"
        buildConfigField "String", "VERSION_NAME", "\"2.0.0\""
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        encoding 'UTF-8'
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
    }
    buildFeatures {
        buildConfig = true
    }
    lint {
        disable 'GradleDependency'
    }

    publishing {
        singleVariant('release')
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'


    //Primary Ad Networks
    compileOnly 'com.google.android.gms:play-services-ads:25.0.0'
    compileOnly 'com.facebook.android:audience-network-sdk:6.21.0'
    compileOnly 'com.google.ads.mediation:facebook:6.21.0.1'
    compileOnly 'com.facebook.infer.annotation:infer-annotation:0.18.0'

    // Secondary Ad Networks
    compileOnly 'com.unity3d.ads:unity-ads:4.17.0'
    compileOnly 'com.applovin:applovin-sdk:13.6.1'
    compileOnly 'com.unity3d.ads-mediation:mediation-sdk:9.3.0'
    compileOnly 'com.startapp:inapp-sdk:5.3.0'
    compileOnly 'com.wortise:android-sdk:1.7.2'

    // GDPR & Consent
    api 'com.google.android.ump:user-messaging-platform:4.0.0'
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = "com.github.partharoypc"
                artifactId = "adglide"
                version = "2.0.0"

                pom {
                    name = "AdGlide"
                    description = "AdGlide is a premium ad mediation library for Android that helps you monetize your app with multiple ad networks."
                    url = "https://github.com/partharoypc/AdGlide"
                    licenses {
                        license {
                            name = "The Apache Software License, Version 2.0"
                            url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                        }
                    }
                    developers {
                        developer {
                            id = "partharoypc"
                            name = "Partha Roy"
                            email = "[EMAIL_ADDRESS]"
                        }
                    }
                    scm {
                        connection = "scm:git:github.com/partharoypc/AdGlide.git"
                        developerConnection = "scm:git:github.com/partharoypc/AdGlide.git"
                        url = "https://github.com/partharoypc/AdGlide"
                    }
                }
            }
        }
    }
}
